eclipse warnings, Java 9 reflection style